<resources>
    <string name="app_name">FYPCoeliac</string>

    <string name="search_field">Enter product name or brand</string>

    <string name="app_title">Gluten Free Food Scanner</string>

    <!-- navbar titles -->
    <string name="nav_scan">Scan</string>
    <string name="nav_info">Info</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_search">Search</string>
    <string name="nav_cat">Categories</string>

    <!-- Section titles -->
    <string name="home">Home</string>
    <string name="gluten_info">What is Gluten?</string>
    <string name="coeliac_info">Coeliac Disease</string>
    <string name="gf_diet">Gluten Free Diet</string>
    <string name="labelling_info">Labelling</string>
    <string name="gf_oats">Gluten Free Oats</string>
    <string name="disclaimer">Disclaimer</string>

    <string name="instructions">Press the button when ingredients appear on the screen</string>

    <!-- Category labels -->
    <string-array name="food_categories">
        <item>Baking Ingredients &amp; Gluten Free Flours</item>
        <item>Biscuits</item>
        <item>Gluten Free Breads</item>
        <item>Cakes &amp; Desserts</item>
        <item>Cereals</item>
        <item>Confectionary</item>
        <item>Crackers</item>
        <item>Dairy &amp; Non Dairy Alternatives</item>
        <item>Drinks - Alcoholic</item>
        <item>Drinks - Non Alcoholic</item>
        <item>Fats &amp; Oils</item>
        <item>Fish Products</item>
        <item>Herbs, Spices, &amp; Seasoning Mixes</item>
        <item>Ice Cream &amp; Frozen Treats</item>
        <item>Meal Accompaniments</item>
        <item>Meat Products</item>
        <item>Medicines &amp; Supplements</item>
        <item>Pasta, Noodles, &amp; Rice</item>
        <item>Pizza &amp; Tortillas</item>
        <item>Preserves, Nut Butters, &amp; Spreads</item>
        <item>Pure Oat Gluten Free Products</item>
        <item>Ready Meals</item>
        <item>Sauces</item>
        <item>Soups</item>
        <item>Supermarkets</item>
        <item>Vegetables, Potato, &amp; Fruit Products</item>
        <item>Gluten Free Bakeries</item>
    </string-array>

    <!-- Info pages text -->
    <string name="gluten_info_text">Gluten is the name of a protein found in wheat, barley, and rye.
        Gluten acts as a glue, helping food to maintain its shape and stick together. Gluten
        may also be found in oats due to cross contamination in the growing, harvesting, and
        milling process.\n\n</string>
    <string name="gf_diet_info">There are many reasons for following a gluten free diet, including:\n
        \n\t\t• Coeliac disease\n\t\t• Non-coeliac gluten sensitivity \n\t\t• Wheat or gluten allergy\n\t\t• Irritable
        Bowel Syndrome\n\t\t• Autoimmune diseases, including \n\t\t\t rheumatoid arthritis and multiple
        \n\t\t\t sclerosis\n\t\t• Personal choice\n\nGluten is a protein found in wheat, barley, and rye.\n\n</string>
    <string name="coeliac_info_text">Coeliac disease is an auto-immune disease causing a reaction to
        gluten, a protein found in wheat, barley and rye. Sufferers react abnormally to ingesting
        gluten, causing the intestine to become inflamed and damaged.\n\nSymptoms may include:
        \n\t\t• Diarrhoea\n\t\t• Constipation\n\t\t• Bloating\n\t\t• Chronic fatigue\n\t\t• Anaemia
        \n\t\t• Failure to thrive in children\n\t\t• Weight loss\n\t\t• Mouth ulcers\n
        \t\t• Depression\n\t\t• Infertility\n\nPresentation of the disease varies from patient to
        patient, and some may present no symptoms at all.\n\nDiagnosis of coeliac disease requires a blood test, followed by an intestinal
        biopsy during a gastroscopy. It is possible for a blood test to give a false negative result.\n
        \nThe only treatment for coeliac disease is a lifelong gluten free diet.\n\n</string>
    <string name="labelling_info_text">A “gluten free” label on food indicates that the product
        contains less than 20 parts per million of gluten. This is a level deemed safe for coeliacs
        to consume.\n\nThe Crossed Grain is an internationally recognised symbol that identifies a
        food product as being gluten free.\n\nWhen checking ingredients lists, it is important to
        check for many hidden and obvious sources of gluten:\n\t\t• Wheat, and any derivatives\n\t\t• Rye
        \n\t\t• Barley\n\t\t• Oats\n\t\t• Spelt\n\t\t• Malt, and any derivatives (excluding \n\t\t\tMalt Vinegar)\n
        \nIf a product “may contain” any of the above ingredients, coeliacs are advised not to consume them.\n
        \nThe most up-to-date information about what a food contains will always be found on its label.
        While the food list aims to keep an accurate listing of gluten free products, ingredients may
        change before the list can be updated. Therefore, coeliacs are always advised to check the
        label of any food products before they consume it.\n\n</string>
    <string name="gf_oats_info_text">Oats do not contain gluten but may be contaminated by gluten
        containing grains during growing, harvesting, and processing. Coeliacs should only consume oats that are labelled
        gluten free.\n\nA minority of coeliacs are still unable to tolerate gluten free oats and so
        must exclude them from their diet.\n\n</string>
    <string name="disclaimer_text">The information provided in this application is as up-to-date as
        possible, but the most up-to-date information will always be found on a product’s ingredients
        label. \n\n<b>Always check the label of a food product before consuming it.\n\n</b></string>

    <string name="title_activity_main_navdrawer">main_navdrawer</string>

    <string-array name="forbidden_ingredients">
        <item>cereals containing gluten</item>
        <item>gluten</item>
        <item>wheat</item>
        <item>barley</item>
        <item>rye</item>
        <item>oat</item>
        <item>spelt</item>
        <item>malt</item>
    </string-array>

    <string-array name="allowed_ingredients">
        <item>gluten free</item>
        <item>gluten-free</item>
        <item>gluten free wheat starch</item>
        <item>gluten-free wheat starch</item>
        <item>gluten free oats</item>
        <item>gluten-free oats</item>
        <item>gluten free oat flour</item>
        <item>gluten-free oat flour</item>
        <item>malt vinegar</item>
    </string-array>

    <string-array name="may_contain">
        <item>may contain traces of</item>
        <item>may contain</item>
        <item>produced in a facility</item>
        <item>produced in</item>
        <item>produced on</item>
        <item>made in a factory</item>
    </string-array>

    <string-array name="allergens">
        <item>cereals containing gluten</item>
        <item>gluten</item>
        <item>wheat</item>
        <item>barley</item>
        <item>rye</item>
        <item>oat</item>
        <item>crustaceans</item>
        <item>prawn</item>
        <item>crab</item>
        <item>lobster</item>
        <item>egg</item>
        <item>fish</item>
        <item>peanut</item>
        <item>soy</item>
        <item>milk</item>
        <item>lactose</item>
        <item>nut</item>
        <item>celery</item>
        <item>mustard</item>
        <item>sesame seeds</item>
        <item>sulphur dioxide</item>
        <item>sulphites</item>
        <item>lupin</item>
        <item>mollusc</item>
        <item>clams</item>
        <item>scallops</item>
        <item>mussels</item>
        <item>squid</item>
        <item>oyster</item>
    </string-array>


    <string name="action_settings">Settings</string>
</resources>
