<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_search"
        android:id="@+id/nav_search_id" />
    <item
        android:id="@+id/nav_cat_id"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/nav_cat" />
    <item
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/nav_scan"
        android:id="@+id/nav_scan_id" />
    <item
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/nav_info"
        android:id="@+id/nav_info_id" />
    <item
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_profile"
        android:id="@+id/nav_profile_id" />
</menu>